why: fix reference tap scroll jumping

--- a/why/css/main.css
+++ b/why/css/main.css
@@ -1,5 +1,5 @@
-sup > a {
-    text-decoration: none;
+sup > span {
+    color: #0077BB;
 }
 
 @media (max-width: 768px) {
